// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout should navigate to photos tab 1`] = `
<Layout>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="/projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className="undefined"
          id="nav-photos"
          key="/photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="/posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="/resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <d
        fallback={<Loader />}
      >
        <Switch>
          <Consumer>
            <Route
              component={[Function]}
              computedMatch={
                Object {
                  "isExact": true,
                  "params": Object {},
                  "path": "/photos",
                  "url": "/photos",
                }
              }
              key="/photos"
              location={
                Object {
                  "hash": "",
                  "pathname": "/photos",
                  "search": "",
                  "state": undefined,
                }
              }
              path="/photos"
            >
              <Consumer>
                <Provider
                  value={
                    Object {
                      "history": Object {
                        "action": "PUSH",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 3,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/photos",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      },
                      "location": Object {
                        "hash": "",
                        "pathname": "/photos",
                        "search": "",
                        "state": undefined,
                      },
                      "match": Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/photos",
                        "url": "/photos",
                      },
                      "staticContext": undefined,
                    }
                  }
                >
                  <Photos
                    history={
                      Object {
                        "action": "PUSH",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 3,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/photos",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/photos",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    match={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/photos",
                        "url": "/photos",
                      }
                    }
                  >
                    <section />
                  </Photos>
                </Provider>
              </Consumer>
            </Route>
          </Consumer>
        </Switch>
      </d>
    </main>
  </div>
</Layout>
`;

exports[`layout should navigate to posts tab 1`] = `
<Layout>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="/projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="/photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className="undefined"
          id="nav-posts"
          key="/posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="/resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <d
        fallback={<Loader />}
      >
        <Loader>
          <div
            className="loader"
          >
            <span
              key={1}
            />
            <span
              key={2}
            />
            <span
              key={3}
            />
            <span
              key={4}
            />
          </div>
        </Loader>
      </d>
    </main>
  </div>
</Layout>
`;

exports[`layout should navigate to projects tab 1`] = `
<Layout>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className="undefined"
          id="nav-projects"
          key="/projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="/photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="/posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="/resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <d
        fallback={<Loader />}
      >
        <Switch>
          <Consumer>
            <Route
              component={[Function]}
              computedMatch={
                Object {
                  "isExact": true,
                  "params": Object {},
                  "path": "/projects",
                  "url": "/projects",
                }
              }
              key="/projects"
              location={
                Object {
                  "hash": "",
                  "pathname": "/projects",
                  "search": "",
                  "state": undefined,
                }
              }
              path="/projects"
            >
              <Consumer>
                <Provider
                  value={
                    Object {
                      "history": Object {
                        "action": "PUSH",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 2,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/projects",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      },
                      "location": Object {
                        "hash": "",
                        "pathname": "/projects",
                        "search": "",
                        "state": undefined,
                      },
                      "match": Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/projects",
                        "url": "/projects",
                      },
                      "staticContext": undefined,
                    }
                  }
                >
                  <Projects
                    history={
                      Object {
                        "action": "PUSH",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 2,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/projects",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/projects",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    match={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/projects",
                        "url": "/projects",
                      }
                    }
                  >
                    <section>
                      <Card
                        image=""
                        onClick={[Function]}
                        primary="pixi.js project"
                        secondary="pixi.js"
                      >
                        <article
                          className="undefined"
                          onClick={[Function]}
                        >
                          <header>
                            <h4>
                              pixi.js project
                            </h4>
                          </header>
                          <footer>
                            pixi.js
                          </footer>
                        </article>
                      </Card>
                      <Card
                        image=""
                        onClick={[Function]}
                        primary="babylon.js project"
                        secondary="babylon.js"
                      >
                        <article
                          className="undefined"
                          onClick={[Function]}
                        >
                          <header>
                            <h4>
                              babylon.js project
                            </h4>
                          </header>
                          <footer>
                            babylon.js
                          </footer>
                        </article>
                      </Card>
                    </section>
                  </Projects>
                </Provider>
              </Consumer>
            </Route>
          </Consumer>
        </Switch>
      </d>
    </main>
  </div>
</Layout>
`;

exports[`layout should navigate to resume tab 1`] = `
<Layout>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="/projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="/photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="/posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className="undefined"
          id="nav-resume"
          key="/resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <d
        fallback={<Loader />}
      >
        <Switch>
          <Consumer>
            <Route
              component={[Function]}
              computedMatch={
                Object {
                  "isExact": true,
                  "params": Object {},
                  "path": "/resume",
                  "url": "/resume",
                }
              }
              key="/resume"
              location={
                Object {
                  "hash": "",
                  "pathname": "/resume",
                  "search": "",
                  "state": undefined,
                }
              }
              path="/resume"
            >
              <Consumer>
                <Provider
                  value={
                    Object {
                      "history": Object {
                        "action": "PUSH",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 5,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/resume",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      },
                      "location": Object {
                        "hash": "",
                        "pathname": "/resume",
                        "search": "",
                        "state": undefined,
                      },
                      "match": Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/resume",
                        "url": "/resume",
                      },
                      "staticContext": undefined,
                    }
                  }
                >
                  <Resume
                    history={
                      Object {
                        "action": "PUSH",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 5,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/resume",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/resume",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    match={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/resume",
                        "url": "/resume",
                      }
                    }
                  >
                    <section>
                      <embed
                        height="100%"
                        src="https://jaxreiff.com/resume/resume.pdf#toolbar=0"
                        type="application/pdf"
                        width="100%"
                      />
                    </section>
                  </Resume>
                </Provider>
              </Consumer>
            </Route>
          </Consumer>
        </Switch>
      </d>
    </main>
  </div>
</Layout>
`;

exports[`layout should render 1`] = `
<Layout>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="/projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="/photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="/posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="/resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <d
        fallback={<Loader />}
      >
        <Switch>
          <Consumer>
            <Route
              component={[Function]}
              computedMatch={
                Object {
                  "isExact": true,
                  "params": Object {},
                  "path": "/",
                  "url": "/",
                }
              }
              exact={true}
              location={
                Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                }
              }
              path="/"
            >
              <Consumer>
                <Provider
                  value={
                    Object {
                      "history": Object {
                        "action": "POP",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 1,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      },
                      "location": Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                      "match": Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/",
                        "url": "/",
                      },
                      "staticContext": undefined,
                    }
                  }
                >
                  <Homepage
                    history={
                      Object {
                        "action": "POP",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "length": 1,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    match={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/",
                        "url": "/",
                      }
                    }
                  >
                    <section>
                      <header>
                        <h2>
                          Homepage
                        </h2>
                      </header>
                      <div
                        style={
                          Object {
                            "textAlign": "center",
                          }
                        }
                      >
                        Site under construction
                      </div>
                      <Loader>
                        <div
                          className="loader"
                        >
                          <span
                            key={1}
                          />
                          <span
                            key={2}
                          />
                          <span
                            key={3}
                          />
                          <span
                            key={4}
                          />
                        </div>
                      </Loader>
                    </section>
                  </Homepage>
                </Provider>
              </Consumer>
            </Route>
          </Consumer>
        </Switch>
      </d>
    </main>
  </div>
</Layout>
`;
